# AncesTree

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
data/real/: 270_deep.txt  270_whole.txt  283_deep.txt  283_whole.txt  292_deep.txt  292_whole.txt  317_deep.txt  317_whole.txt  324_deep.txt  324_whole.txt  330_deep.txt  330_whole.txt  339_deep.txt  339_whole.txt  356_deep.txt  356_whole.txt  472_deep.txt  472_whole.txt  4990_deep.txt  4990_whole.txt  499_deep.txt  499_whole.txt  CLL003_deep.txt  CLL003_whole.txt  CLL006_deep.txt  CLL006_single  CLL006_whole.txt  CLL006_whole_single.txt  CLL077_deep.txt  CLL077_whole.txt  EV003.txt  EV005.txt  EV006.txt  EV007.txt  README.md  RK26.txt  RMH002.txt  RMH004.txt  RMH008.txt
data/simulated/Cov_1000_Samples_4_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_0.true  sim_1.input  sim_1.true  sim_2.input  sim_3.input  sim_4.input  sim_5.input  sim_6.input  sim_6.true  sim_7.input  sim_8.input  sim_9.input
data/simulated/Cov_1000_Samples_5_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_0.true  sim_1.input  sim_2.input  sim_3.input  sim_3.true  sim_4.input  sim_4.true  sim_5.input  sim_6.input  sim_6.true  sim_7.input  sim_8.input  sim_8.true  sim_9.input  sim_9.true
data/simulated/Cov_1000_Samples_6_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_1.input  sim_1.true  sim_2.input  sim_3.input  sim_4.input  sim_4.true  sim_5.input  sim_6.input  sim_7.input  sim_8.input  sim_8.true  sim_9.input
data/simulated/Cov_100_Samples_4_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_1.input  sim_2.input  sim_2.true  sim_3.input  sim_4.input  sim_4.true  sim_5.input  sim_6.input  sim_7.input  sim_7.true  sim_8.input  sim_8.true  sim_9.input  sim_9.true
data/simulated/Cov_100_Samples_5_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_1.input  sim_2.input  sim_2.true  sim_3.input  sim_4.input  sim_5.input  sim_5.true  sim_6.input  sim_7.input  sim_7.true  sim_8.input  sim_9.input
data/simulated/Cov_100_Samples_6_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_0.true  sim_1.input  sim_2.input  sim_2.true  sim_3.input  sim_3.true  sim_4.input  sim_5.input  sim_6.input  sim_6.true  sim_7.input  sim_8.input  sim_9.input  sim_9.true
data/simulated/Cov_50_Samples_4_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_1.input  sim_2.input  sim_3.input  sim_3.true  sim_4.input  sim_5.input  sim_5.true  sim_6.input  sim_7.input  sim_8.input  sim_9.input
data/simulated/Cov_50_Samples_5_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_1.input  sim_1.true  sim_2.input  sim_3.input  sim_4.input  sim_5.input  sim_6.input  sim_7.input  sim_8.input  sim_9.input
data/simulated/Cov_50_Samples_6_Mut_100_Clone_10_PCR_Removed/: sim_0.input  sim_1.input  sim_2.input  sim_3.input  sim_4.input  sim_5.input  sim_5.true  sim_6.input  sim_7.input  sim_7.true  sim_8.input  sim_9.input
doc/: CLL077_whole.dot  CLL077_whole.sol
src/: analyse.cpp  analysesolution.cpp  analysesolutionprob.cpp  ancestree.cpp  ancestreeilp.cpp  ancestrymatrix.cpp  ancestrymatrix.h  baseancestrygraph.cpp  baseancestrygraph.h  clonaltree.cpp  clonaltree.h  cluster.cpp  comparison.cpp  comparison.h  config.h.in  constructancestrymatrix.cpp  intmaxilpsolver.cpp  intmaxilpsolver.h  machinainput.cpp  matrix.cpp  matrix.h  maxsolution.cpp  maxsolution.h  ppmatrix.cpp  ppmatrix.h  probancestrygraph.cpp  probancestrygraph.h  probcomparison.cpp  probcomparison.h  readcountmatrix.cpp  readcountmatrix.h  realintervalmatrix.cpp  realintervalmatrix.h  realmatrix.cpp  realmatrix.h  solutiongraph.cpp  solutiongraph.h  solver.cpp  solver.h  utils.cpp  (+2 more)
src/python/: makeSimData.py
